[gd_scene load_steps=14 format=3 uid="uid://dkskcj6foqw8u"]

[ext_resource type="Script" path="res://scripts/Player Controller.gd" id="1_weqgv"]
[ext_resource type="Texture2D" uid="uid://xx1aqv88pafu" path="res://sprites/hud_background.png" id="2_a510o"]
[ext_resource type="Texture2D" uid="uid://birgblp1pgx4n" path="res://sprites/sprint.png" id="3_1yjyr"]
[ext_resource type="Texture2D" uid="uid://dtptu2s8y6ou2" path="res://sprites/sprint_highlighted.png" id="4_b06sg"]
[ext_resource type="Texture2D" uid="uid://bs1kyj6mreyxm" path="res://sprites/settings.png" id="5_7pnv6"]
[ext_resource type="Texture2D" uid="uid://d1734qb1gjvq0" path="res://sprites/backpack.png" id="5_7641f"]
[ext_resource type="Texture2D" uid="uid://bqthgoaa1t551" path="res://sprites/attack.png" id="6_aps3w"]
[ext_resource type="Texture2D" uid="uid://bwd0rl0ehllk7" path="res://sprites/backpack_highlighted.png" id="6_u11md"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4a6kt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7mxa0"]
albedo_color = Color(0, 0, 0, 0.705882)

[sub_resource type="TorusMesh" id="TorusMesh_vh428"]
material = SubResource("StandardMaterial3D_7mxa0")
inner_radius = 0.8

[sub_resource type="LabelSettings" id="LabelSettings_d4ciq"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_j0dw8"]
font_size = 40

[node name="Controller" type="StaticBody3D"]
transform = Transform3D(1.00012, 0, 0, 0, 1.00012, 0, 0, 0, 1.00012, 0, 0, 0)
script = ExtResource("1_weqgv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_4a6kt")

[node name="Outline" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.277059, 0)
mesh = SubResource("TorusMesh_vh428")

[node name="Hud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -39.0
offset_bottom = 649.0
grow_horizontal = 0

[node name="background" type="TextureRect" parent="Hud"]
layout_mode = 0
offset_left = -69.0
offset_right = 40.0
offset_bottom = 1080.0
texture = ExtResource("2_a510o")

[node name="sprint_button" type="TextureButton" parent="Hud/background"]
layout_mode = 0
offset_left = -3.0
offset_top = 12.0
offset_right = 112.0
offset_bottom = 131.0
toggle_mode = true
texture_normal = ExtResource("3_1yjyr")
texture_pressed = ExtResource("4_b06sg")
ignore_texture_size = true
stretch_mode = 0

[node name="Inventory" type="TextureButton" parent="Hud/background"]
layout_mode = 0
offset_left = 4.0
offset_top = 128.0
offset_right = 105.0
offset_bottom = 228.0
toggle_mode = true
texture_normal = ExtResource("5_7641f")
texture_pressed = ExtResource("6_u11md")
stretch_mode = 0

[node name="Settings" type="TextureButton" parent="Hud/background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.5
offset_top = -116.0
offset_right = 54.5
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("5_7pnv6")
ignore_texture_size = true
stretch_mode = 0

[node name="Inventory" type="Control" parent="."]
custom_minimum_size = Vector2(1400, 800)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -700.0
offset_top = -400.0
offset_right = 700.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Inventory"]
custom_minimum_size = Vector2(1400, 800)
layout_mode = 0
offset_right = 883.0
offset_bottom = 503.0

[node name="ScrollContainer" type="ScrollContainer" parent="Inventory/Panel"]
custom_minimum_size = Vector2(1400, 800)
layout_mode = 0
offset_right = 800.0
offset_bottom = 500.0
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Inventory/Panel/ScrollContainer"]
layout_mode = 2
columns = 20

[node name="InventorySlot" type="Button" parent="Inventory/Panel/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Inventory/Panel/ScrollContainer/GridContainer/InventorySlot"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -44.5
offset_right = 44.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_aps3w")

[node name="Settings" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(1400, 800)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -700.0
offset_top = -400.0
offset_right = 700.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Settings"]
custom_minimum_size = Vector2(1400, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -700.0
offset_top = -400.0
offset_right = 700.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="quit" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -49.0
offset_right = 152.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Settings/quit"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.5
offset_right = 95.5
offset_bottom = 110.0
grow_horizontal = 2
text = "QUIT"
label_settings = SubResource("LabelSettings_d4ciq")

[node name="close" type="Button" parent="Settings"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Settings/close"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.5
offset_top = -27.5
offset_right = 13.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
text = "X"
label_settings = SubResource("LabelSettings_j0dw8")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.99988, 0, 0, 0, 0.99988, 0, 0, 0, 0.99988, 0, 0, 0)

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="toggled" from="Hud/background/sprint_button" to="." method="_sprint_toggled"]
[connection signal="pressed" from="Hud/background/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Hud/background/Settings" to="." method="_settings_button_pressed"]
[connection signal="pressed" from="Settings/quit" to="." method="_quit_game"]
[connection signal="pressed" from="Settings/close" to="." method="_close_settings"]
